test: fix PR branch build and test